Зайчатки ответов на комментарии и красивое время

--- a/src/app/locales/ru.json
+++ b/src/app/locales/ru.json
@@ -275,6 +275,7 @@
   },
   "comment": {
     "meta": {
+      "reply": "Ответить",
       "replies": "0 ответов | {n} ответ | {n} ответа | {n} ответов",
       "edited": "ред"
     },
