--- a/src/app/locales/ru.json
+++ b/src/app/locales/ru.json
@@ -5,6 +5,7 @@
     "version": "Версия {version}",
     "locale": {
       "pt": "Португальский",
+      "en": "Английский",
       "ru": "Русский"
     },
     "theme": {
