Еще более лучшие улучшения перевода на Английский

--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -58,7 +58,7 @@
     "action": {
       "settings": "Settings",
       "menu": "Menu",
-      "logout": "Go out",
+      "logout": "Logout",
       "options": "More",
       "subscribe": "Subscribe",
       "unsubscribe": "Unsubscribe",
