Переход от Abyss к The Abyss

--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -28,7 +28,7 @@
     "tabs": {
       "timeline": "Timeline",
       "popular": "Popular",
-      "abyss": "Abyss"
+      "abyss": "The abyss"
     },
     "errors": {
       "entries_empty": "No posts yet"
