Действия сообщества и перевод удалены из меню

--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -336,11 +336,7 @@
     "action": {}
   },
   "community": {
-    "action": {
-      "subscribe": "Subscribe",
-      "unsubscribe": "Unsubscribe",
-      "options": "More"
-    },
+    "action": {},
     "meta": {
       "subscribers": "No subscribers | {n} subscriber | {n} subscribers",
       "official": "Official"
