Секс ремонт на португальском и английском языках

--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -263,7 +263,7 @@
     "sex": {
       "male": "Male",
       "female": "Female",
-      "none": "Combat helicopter \"Apache\""
+      "none": "Combat helicopter «Apache»"
     }
   },
   "help": {
