--- a/src/app/locales/pt.json
+++ b/src/app/locales/pt.json
@@ -250,6 +250,11 @@
       "username": "Conecte-se",
       "locale": "Idioma da interface",
       "theme": "Tema de interface"
+    },
+    "sex": {
+      "male": "Homem",
+      "female": "Mulher",
+      "none": "Helicóptero de ataque «Apache»"
     }
   },
   "help": {
