Добавление перевода сообществ на русский язык

--- a/src/app/locales/pt.json
+++ b/src/app/locales/pt.json
@@ -91,6 +91,7 @@
       "users": "Usuários",
       "entries": "Postagens",
       "comments": "Comentários",
+      "communities": "Comunidades",
       "tags": "Tag"
     },
     "section": {
