--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -150,7 +150,7 @@
     "title": "Communities",
     "tabs": {
       "subscribed": "All communities",
-      "manage": "Control"
+      "manage": "Manage"
     }
   },
   "bookmarks": {
